--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -36,13 +36,13 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;margin-bottom: 0; ">
 
             <div class="block">
 
                 <form role="form" id="frmSearchSalesReturn">
 
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+                    <div class="col-md-12" style="padding-top: 0px; padding-left: 0px; padding-right: 0px;">
 
                         <div class="row">
 
@@ -89,10 +89,11 @@
 
                                 </div>
 
-                            <div class="col-md-8" style="text-align: right; padding-top: 27px; padding-bottom: 0px; padding-right: 50px; padding-left: 0px;">
+                            <div class="col-md-8" style="text-align: right; padding-top: 20px; padding-bottom: 0px; padding-left: 0px;margin-bottom: 0; ">
 
-                                <div class="btn-group pull-right">                                   
-                                    <a class="btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">Create </a>
+                                <div class="btn-group" style="text-align: right; ">
+                                    <a class=" btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">
+                                    Create </a>
                                     <button role="button" class="btn btn-danger active edit" id="btnView">View</button>
 
                                 </div>
@@ -109,12 +110,7 @@
 
         </div>
 
-
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
-
-        </div>
-
-
+               
 
         @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
             <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
