--- a/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
@@ -104,7 +104,7 @@
 
         </div>
 
-        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;overflow-y: scroll;height:500px;">
 
 
 
