changes in Barcode for validation if Barcode is empty

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -264,7 +264,7 @@
 
                                     <tr id="SalesOrderItemRow_0">
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Barcode" id="textBarcode_No_0" onblur="javascript: Get_Sales_Order_Items_By_Barcode(0);" placeholder="Barcode No">
+                                            <input class="form-control input-sm barcode"  type="text" name="SaleOrderItemList[0].Barcode" id="textBarcode_No_0" onblur="javascript: Get_Sales_Order_Items_By_Barcode(0);" placeholder="">
                                         </td>
                                         <td>
                                             @*<input class="form-control input-sm" type="text" style="width:150px" name="SaleOrderItemList[0].SKU_Code" id="textSKU_No_0" placeholder="SKU Code" onchange="javascript: Get_Sales_Order_Items_By_SKU_Code(0);">*@
