--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -127,13 +127,13 @@
                 <img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../Images/notification.gif">*@
             @if (Cookies.Warehouse_Notification_Count > 0)
             {
-                
-                <a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>
+
+                <a href="#"><img id="notification_Icon" alt="" role="presentation" width="30" height="30" src="../../Images/notification.gif"></a>
                 @*<img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif">*@
             }
             else
             {
-                 <a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>
+                <a href="#"><img id=" notification_icon" alt="" role="presentation" width="30" height="30" src="../../Images/notification.gif"></a>
                 @*<img alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../../Images/notification.gif">*@
             }
             @if (Cookies.Warehouse_Notification_Count > 0)
