1) Adjust the Notification Image. 2) Re design Receivable page.

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -602,11 +602,8 @@
 
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="col-md-3">
-
-                            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 140px;">
+                       
+                            <div class="col-md-3"> 
 
                                 <div class="block">
                                     <h4 style="margin-top: 0px;">Gift Voucher information.</h4>
@@ -644,9 +641,9 @@
 
                         </div>
 
-                        <div class="row" style="border-top:1px solid #DDD">
+                        <div class="row" style="border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
-                            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 140px;">
+                            @*<div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 140px;">*@
 
                                 <div class="block">
 
@@ -666,7 +663,7 @@
 
                                 </div>
 
-                            </div>
+                            @*</div>*@
 
                         </div>
 
